# EdgeTRM

./: EdgeTRM.ipynb  EdgeTRM_official_wrapper.ipynb  Efficient ML.docx  README.md  add_sections_15_17.py  add_sections_18_22.py  edge-trm-copy.ipynb  parse_nb.py  restore_nb.py  restore_original.py  test_forward.py  trm_quantization_experiments.ipynb  update_notebook.py
TinyRecursiveModels/: edge_trm_wrapper.py  pretrain.py  pyproject.toml  specific_requirements.txt  trm.py
data1/arc2test-aug-128/: identifiers.json  test_puzzles.json
data1/arc2test-aug-128/test/: all__group_indices.npy  all__puzzle_indices.npy  dataset.json
data1/arc2test-aug-128/train/: all__puzzle_identifiers.npy  all__puzzle_indices.npy  dataset.json
