[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-recursive-models"
version = "0.1.0"
description = "Tiny Recursive Models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch==2.7.0",
    "adam-atan2==0.0.3",
    "einops==0.8.1",
    "tqdm==4.67.1",
    "coolname==2.2.0",
    "pydantic==2.11.7",
    "argdantic==1.3.3",
    "wandb==0.21.3",
    "omegaconf==2.3.0",
    "hydra-core==1.3.2",
    "huggingface_hub==0.34.4",
    "packaging==24.1",
    "ninja==1.13.0",
    "wheel==0.45.1",
    "setuptools==80.9.0",
    "setuptools-scm==9.2.0",
    "pydantic-core==2.33.2",
    "numba==0.61.2",
    "triton==3.3.0"
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.setuptools]
packages = ["config", "dataset", "evaluators", "models", "utils"]
py-modules = ["edge_trm_wrapper", "pretrain", "puzzle_dataset"]
